crates/vencord_ast_parser/src/tests/snapshots/vencord_ast_parser__vencord_ast_parser__tests__replace_concat_template.snap
---
source: crates/vencord_ast_parser/src/vencord_ast_parser/tests/mod.rs
assertion_line: 39
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: ".toggleGuildFolderExpand(",
      )),
      s: {
        "start": 187,
        "end": 214,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "(?<=folderNode:((?:[A-Za-z_$][\\w]*)),expanded:)(?:[A-Za-z_$][\\w]*)(?=,)",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 590,
            "end": 629,
          },
        ),
        replace: ReplaceLike(
          v: Template(TemplateEvaluator(
            lits: [
              "typeof ",
              "===\"boolean\"?",
              ":",
              ".has(",
              ".id),betterFoldersExpandedIds:",
              " instanceof Set?",
              ":void 0",
            ],
            captures: [
              0,
              0,
              0,
              1,
              0,
              0,
            ],
          )),
          s: {
            "start": 660,
            "end": 983,
          },
        ),
        no_warn: false,
      ),
    ],
  ),
]
