crates/vencord_ast_parser/src/tests/snapshots/vencord_ast_parser__vencord_ast_parser__tests__replace_concat_template_with_ident.snap
---
source: crates/vencord_ast_parser/src/vencord_ast_parser/tests/mod.rs
assertion_line: 45
expression: patches
---
[
  Patch(
    plugin_id: None,
    all: false,
    no_warn: false,
    find: MatchLike(
      v: Str(FinderDef(
        needle: ".handleSendMessage,onResize:",
      )),
      s: {
        "start": 136,
        "end": 166,
      },
    ),
    replacement: [
      Replacement(
        match_: MatchLike(
          v: Regex(MatchRegex(
            pattern: "let ((?:[A-Za-z_$][\\w]*))=(?:[A-Za-z_$][\\w]*)\\.(?:[A-Za-z_$][\\w]*)\\.parse\\(((?:[A-Za-z_$][\\w]*)),.+?\\.getSendMessageOptions\\(\\{.+?\\}\\)?;(?=.+?((?:[A-Za-z_$][\\w]*))\\.flags=)(?<=\\)\\(({.+?})\\)\\.then.+?)",
            flags: RegExpFlagsDef(
              bits: 0,
            ),
          )),
          s: {
            "start": 269,
            "end": 385,
          },
        ),
        replace: ReplaceLike(
          v: Template(TemplateEvaluator(
            lits: [
              "",
              "if(await Vencord.Api.MessageEvents._handlePreSend(",
              ".id,",
              ",",
              ",",
              "))return{shouldClear:false,shouldRefocus:true};",
            ],
            captures: [
              0,
              2,
              1,
              4,
              3,
            ],
          )),
          s: {
            "start": 412,
            "end": 667,
          },
        ),
        no_warn: false,
      ),
    ],
  ),
]
